--- a/practise/pom.xml
+++ b/practise/pom.xml
@@ -7,7 +7,7 @@
 	<properties>
 		<boot.version>1.4.2.RELEASE</boot.version>
 		<java.version>1.8</java.version>
-		<start-class>com.dhleC.labelService.Application</start-class>
+		<start-class>com.sample.concurrent.Application</start-class>
 	</properties>
 	<dependencies>
 		<dependency>
